--- a/.gitignore
+++ b/.gitignore
@@ -1,9 +1,17 @@
+#Dotfiles
 .npm
 .cache
 .config
 .docker
 .gem
 .local
+.pgAdmin4*
+.ssh
+.lesshst
+.viminfo
+.bash_history
+
+#Folders
 AppData
 Contacts
 Desktop
@@ -11,16 +19,34 @@ Documents
 Downloads
 Favorites
 Intel
-keepassxc
+3D Objects
+Application Data
+Cookies
+IntelGraphicsProfiles
+Local Settings
+MicrosoftEdgeBackups
+My Documents
 Links
 Music
 OneDrive
 Pictures
 Saved Games
-scoop
 Searches
-Tor Browser
 Tracing
 Videos
-cpuz_x64.exe
+Tor Browser
+NetHood
+PrintHood
+Recent
+SendTo
+Start Menu
+Templates
 
+#Misc
+scoop
+projects
+vimfiles
+keepassxc*
+cpuz*
+ntuser*
+NTUSER*
